<resources>
    <!--Afroze Kassam
Proj2_kassam
April 26th 2025-->
    <string name="app_name">Loan Calculator</string>
    <string name="app_title">Loan Payment Calculator</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="loan_term">Loan Term</string>
    <string name="ten">10 Years</string>
    <string name="fifteen">15 Years</string>
    <string name="thirty">30 Years</string>
    <string name="calc">Calculate</string>
</resources>
